--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: "2"
 services:
-  sonarr:
+################################################################################
+##                                    Jackett                                 ##
+################################################################################
+jackett:
+  image: linuxserver/jackett
+  container_name: jackett
+  environment:
+    - PUID=1000
+    - PGID=1000
+    - TZ=Europe/Rome
+    - UMASK_SET=022 #optional
+  volumes:
+    - jackett_data:/config
+    - jackett_data:/downloads
+  ports:
+    - 9117:9117
+  restart: unless-stopped
+################################################################################
+##                                    Sonarr                                  ##
+################################################################################
+sonarr:
     image: linuxserver/sonarr
     container_name: sonarr
     environment:
