--- a/MediaServer.yml
+++ b/MediaServer.yml
@@ -20,6 +20,7 @@ services:
       - 8112:8112
     restart: unless-stopped
 
+
 ################################################################################
 ##                                    Jackett                                 ##
 ################################################################################
@@ -37,6 +38,7 @@ services:
     ports:
       - 9117:9117
     restart: unless-stopped
+
 
 ################################################################################
 ##                                    Sonarr                                  ##
@@ -57,6 +59,7 @@ services:
       - 8989:8989
     restart: unless-stopped
 
+
 ################################################################################
 ##                                 Radarr                                     ##
 ################################################################################
@@ -76,6 +79,7 @@ services:
       - 7878:7878
     restart: unless-stopped
 
+
 ################################################################################
 ##                                    Bazarr                                 ##
 ################################################################################
@@ -94,6 +98,7 @@ services:
     ports:
       - 6767:6767
     restart: unless-stopped
+
 
 ################################################################################
 ##                                    PLEX                                    ##
@@ -115,10 +120,10 @@ services:
       - 32400:32400
     restart: unless-stopped
 
+
 ################################################################################
 ##                                 Netatalk                                   ##
 ################################################################################
-
   netatalk:
     image: cptactionhank/netatalk:latest
     container_name: netatalk
@@ -192,4 +197,18 @@ services:
     ports:
       - 80:80
       - 443:443
+    restart: unless-stopped
+
+################################################################################
+##                                Syncthing                                   ##
+################################################################################
+  syncthing:
+    image: syncthing/syncthing:latest
+    container_name: syncthing
+    network_mode: host
+    volumes:
+          - /media/spawn5m/Media/Photo/:/var/syncthing
+    ports:
+      - 8384:8384
+      - 22000:22000
     restart: unless-stopped
